<resources>
    <string name="app_name">Go Notes</string>
    <string name="add_note">add tasks</string>
    <string name="note_title">Task title</string>
    <string name="note_text">Task text</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="mes_dialog">Do you really want to delete this note?</string>
    <string name="mes_dialog_yes">Yes</string>
    <string name="mes_dialog_no">No</string>
    <string name="first_notes">Text</string>
    <string name="text_btn_delete">Delete</string>
    <string name="red">color_red</string>
    <string name="green">color_green</string>
    <string name="blue">color_blue</string>
    <string name="search_notes">Search</string>
    <string name="orange">color orange</string>
    <string name="purple">color purple</string>
    <string name="button_delete">button_delete</string>
    <string name="favorite">button favorite</string>
</resources>