<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TaskActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp16"
        android:hint="@string/note_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="2"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp16"
        android:hint="@string/note_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minLines="7"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/colorPalette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <ImageButton
            android:id="@+id/colorRed"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:clickable="true"
            android:background="@drawable/color_circle"
            android:contentDescription="@string/red"
            android:src="@color/red" />

        <ImageButton
            android:id="@+id/colorGreen"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:clickable="true"
            android:background="@drawable/color_circle"
            android:contentDescription="@string/green"
            android:src="@color/green" />

        <ImageButton
            android:id="@+id/colorBlue"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="4dp"
            android:clickable="true"
            android:background="@drawable/color_circle"
            android:contentDescription="@string/blue"
            android:src="@color/blue" />

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/colorPalette" />

    <Button
        android:id="@+id/clear"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save" />

</androidx.constraintlayout.widget.ConstraintLayout>