<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/add_background"
    tools:context=".ui.NoteActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/dp16"
        android:hint="@string/note_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:gravity="top"
            android:minLines="2"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp16"
        android:hint="@string/note_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:gravity="top"
            android:minLines="7"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/save"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/button_save"
        android:clickable="true"
        android:contentDescription="@string/save"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/text" />

    <ImageView
        android:id="@+id/clear"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/dp16"
        android:background="@drawable/button_clear"
        android:clickable="true"
        android:contentDescription="@string/clear"
        android:focusable="true"
        app:layout_constraintEnd_toStartOf="@+id/save"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />

</androidx.constraintlayout.widget.ConstraintLayout>